# datasp-dados

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
core/downloads/: dadosabertos.py  geosampa.py
core/geo/: __init__.py  interpolation.py
core/urbanismo/: __init__.py  urban_parks_area.py
core/utils/: cleaning.py
dados/: A205703192_29_141_165.csv
dados/saude/: A161721192_29_142_217.csv  A171453192_29_141_45.csv  A180859192_29_141_183.csv  A184631192_29_138_249.csv
notebooks/: 00 População por subprefeitura - extração.ipynb  00 População por subprefeitura.ipynb  01 População por subprefeitura - transformação.ipynb
notebooks/educacao/: 01 educacao.ipynb  02 ideb.ipynb  03 conversao de siglas.ipynb  educacao.ipynb
notebooks/saude/: saude.ipynb
notebooks/urbanismo/: 01 areas de risco - extração.ipynb  02 areas de risco - transformação e armazenamento.ipynb  03 habitação - extração.ipynb  04 habitação - transformação e armazenamento.ipynb  05 ObservaSampa - extração.ipynb  06 Observa Sampa - transformação e armazenamento.ipynb  07 Censo - extração.ipynb  08 Censo - transformação e armazenamento copy.ipynb  09 - Resumo Painel - extração.ipynb  10 - Resumo Painel - transformação e armazenamento.ipynb  urbanismo - extração.ipynb  urbanismo - transformação e armazenamento.ipynb  urbanismo.ipynb
notebooks_outputs/: 00 População por subprefeitura - extração.ipynb  00 População por subprefeitura.ipynb  01 População por subprefeitura - transformação.ipynb
rendered_notebooks/: 00 População por subprefeitura.ipynb
(+24 files in other folders)
