[project]
name = "dados-painel"
version = "0.1.0"
description = "Módulo para extração e transformação de dados utilizados no Painel do OPP."
authors = [
    {name = "Bruno Azuma Balzano",email = "brunoazuma@usp.br"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "odf (>=0.0.1,<0.0.2)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
